--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app id="WebApp_ID" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd http://www.springframework.org/dtd/spring-beans.dtd">
-    
+
 	<display-name>sheep</display-name>
-	
+
 
 	<filter>
 		<filter-name>CharacterEncodingFilter</filter-name>
 		<filter-class>com.ems.common.filter.CharacterEncodingFilter</filter-class>
-		
+
 		<init-param>
 			<param-name>charSet</param-name>
 			<param-value>utf-8</param-value>
 		</init-param>
 	</filter>
-	
+
 	<filter-mapping>
 		<filter-name>CharacterEncodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
@@ -22,24 +22,25 @@
 
 
 	<listener>
-        <listener-class>com.ems.common.listener.DBCPListener</listener-class>                
-  	</listener>  	
-  	
-  	<listener>
-  		<listener-class>com.ems.common.listener.JOBListener</listener-class>       
+        <listener-class>com.ems.common.listener.DBCPListener</listener-class>
   	</listener>
-      
+
+  	<listener>
+  		<listener-class>com.ems.common.listener.JOBListener</listener-class>
+  	</listener>
+
     <servlet>
     <servlet-name>jcaptcha</servlet-name>
-    <servlet-class>com.ems.action.board.ImageCaptchaServlet</servlet-class>
-    <load-on-startup>1</load-on-startup>
+    <servlet-class>com.ems.common.captch.ImageCaptchaServlet</servlet-class>
+	 <load-on-startup>1</load-on-startup>
+
     </servlet>
-    
+
 	<servlet-mapping>
 	  <servlet-name>jcaptcha</servlet-name>
 	  <url-pattern>/jcaptcha</url-pattern>
-	</servlet-mapping> 
-	    
+	</servlet-mapping>
+
 <servlet>
     <servlet-name>FileDownload</servlet-name>
     <servlet-class>com.ems.common.servlet.FileDownloadServlet</servlet-class>
