세션 , 관리자 패스워드 변경, 어종별 금액계산

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -15,7 +15,7 @@ log4j.appender.CONSOL=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOL.ImmediateFlush=true
 
 # 이 appender 는 여기 명시된 priority 와 같거나 높은 메세지만 로깅한다#
-log4j.appender.CONSOL.Threshold=INFO
+log4j.appender.CONSOL.Threshold=DEBUG
 
 # Layout 형식 : TTCCLayout, HTMLLayout,  XMLLayout, PatternLayout, SimpleLayout
 # PatternLayout, SimpleLayout - 자바의 Throwable 에러들과 예외를 무시한다
@@ -24,30 +24,6 @@ log4j.appender.CONSOL.layout=org.apache.log4j.PatternLayout
 # %l - 소스코드의 위치정보를 출력한다. %C. %M(%F:%L) 의 축약형이다
 log4j.appender.CONSOL.layout.ConversionPattern=%-5p %l %x =>%m%n
 
-
-
-#########################################################################################
-log4j.appender.SYSTEM=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.SYSTEM.File=../../logs/system.log
-
-# 매일 자정에 로그파일을 교체하며 기존파일은 xx.log_2004.07.12
-log4j.appender.SYSTEM.DatePattern='.'yyyy-MM-dd
-log4j.appender.SYSTEM.Threshold=ERROR
-
-# 자바의 Throwable 에러들과 예외를 포함하기 위해 HTMLLayout을 사용한다.
-log4j.appender.SYSTEM.layout=org.apache.log4j.PatternLayout
-
-
-# [%d{yyyy-MM-dd}형식은 프로그램의 실행속도를 느리게 함으로 SimpleDateFormat 형식지정한다.
-log4j.appender.SYSTEM.layout.DateFormat=ISO8601
-
-# [YYYY-MM-DD HH:MM:SS, mm] 형식을 뜻한다.
-log4j.appender.SYSTEM.layout.TimeZoneID=GMT+9:00
-
-# %l - 소스코드의 위치정보를 출력한다. %C. %M(%F:%L) 의 축약형이다
-log4j.appender.SYSTEM.layout.ConversionPattern=[%d] %-5p %l - %m%n
-
-#########################################################################################
 
 
 # 각 업무 상위패키지를 지정하여 logging 셋팅한다.
